# saline-solution

./: README.md
.vibe/skills/: saline_solution.yaml
basic/: CHIMIE.BAS
c/: Makefile  saline-solution-cli.c
cpp/: CMakeLists.txt
cpp/common/: CMakeLists.txt
cpp/common/include/: ChemicalData.h
cpp/common/src/: Calculations.cpp  ChemicalData.cpp
cpp/imgui/: CMakeLists.txt  README.md
cpp/imgui/include/: Calculations.h  ChemicalData.h  SalineSolutionApp.h
cpp/imgui/src/: ChemicalData.cpp  SalineSolutionApp.cpp  main.cpp
python/: pyproject.toml  saline_solution1.py
python/saline_solution/: types.py  utils.py
python/src/saline_solution/: __init__.py  calculations.py  cli_app.py  constants.py  saline_solution.tcss  tui_app.py
